crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP029.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- - kind:
      name: UnnecessaryBuiltinImport
      body: "Unnecessary builtin import: `*`"
      suggestion: Remove unnecessary builtin import
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 22
    fix:
      content: ""
      location:
        row: 1
        column: 0
      end_location:
        row: 2
        column: 0
    parent: ~
  - kind:
      name: UnnecessaryBuiltinImport
      body: "Unnecessary builtin imports: `ascii`, `bytes`"
      suggestion: Remove unnecessary builtin import
      fixable: true
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 42
    fix:
      content: from builtins import compile
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 42
    parent: ~
  - kind:
      name: UnnecessaryBuiltinImport
      body: "Unnecessary builtin imports: `filter`, `zip`"
      suggestion: Remove unnecessary builtin import
      fixable: true
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 46
    fix:
      content: from six.moves import zip_longest
      location:
        row: 4
        column: 0
      end_location:
        row: 4
        column: 46
    parent: ~
  - kind:
      name: UnnecessaryBuiltinImport
      body: "Unnecessary builtin import: `open`"
      suggestion: Remove unnecessary builtin import
      fixable: true
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 19
    fix:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0
    parent: ~

