crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP030_0.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 33
  fix:
    edits:
      - content: "\"{}\" \"{}\" \"{}\".format(1, 2, 3)"
        location:
          row: 3
          column: 0
        end_location:
          row: 3
          column: 33
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 1
  fix:
    edits:
      - content: "\"a {} complicated {} string with {} {}\".format(\n    \"fourth\", \"second\", \"first\", \"third\"\n)"
        location:
          row: 5
          column: 0
        end_location:
          row: 7
          column: 1
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 15
  fix:
    edits:
      - content: "'{}'.format(1)"
        location:
          row: 9
          column: 0
        end_location:
          row: 9
          column: 15
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 18
  fix:
    edits:
      - content: "'{:x}'.format(30)"
        location:
          row: 11
          column: 0
        end_location:
          row: 11
          column: 18
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 19
  fix:
    edits:
      - content: "'{}'.format(1)"
        location:
          row: 13
          column: 4
        end_location:
          row: 13
          column: 19
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 29
  fix:
    edits:
      - content: "'''{}\\n{}\\n'''.format(1, 2)"
        location:
          row: 15
          column: 0
        end_location:
          row: 15
          column: 29
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 17
    column: 4
  end_location:
    row: 18
    column: 26
  fix:
    edits:
      - content: "\"foo {}\" \\\n    \"bar {}\".format(1, 2)"
        location:
          row: 17
          column: 4
        end_location:
          row: 18
          column: 26
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 17
  fix:
    edits:
      - content: "(\"{}\").format(1)"
        location:
          row: 20
          column: 0
        end_location:
          row: 20
          column: 17
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 27
  fix:
    edits:
      - content: "\"\\N{snowman} {}\".format(1)"
        location:
          row: 22
          column: 0
        end_location:
          row: 22
          column: 27
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 18
  fix:
    edits: []
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 29
    column: 4
  end_location:
    row: 30
    column: 25
  fix:
    edits: []
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 34
    column: 4
  end_location:
    row: 35
    column: 25
  fix:
    edits: []
  parent: ~

