crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP030_2.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 19
  fix:
    edits:
      - location:
          row: 6
          column: 0
        end_location:
          row: 6
          column: 19
        content: "\"{}\".format(*args)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 22
  fix:
    edits:
      - location:
          row: 8
          column: 0
        end_location:
          row: 8
          column: 22
        content: "\"{}\".format(**kwargs)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 23
  fix:
    edits:
      - location:
          row: 10
          column: 0
        end_location:
          row: 10
          column: 23
        content: "\"{}_{}\".format(*args)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 26
  fix:
    edits:
      - location:
          row: 12
          column: 0
        end_location:
          row: 12
          column: 26
        content: "\"{}_{}\".format(1, *args)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 23
  fix:
    edits: []
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 26
  fix:
    edits:
      - location:
          row: 16
          column: 0
        end_location:
          row: 16
          column: 26
        content: "\"{}_{}\".format(*args, 1)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 29
  fix:
    edits:
      - location:
          row: 18
          column: 0
        end_location:
          row: 18
          column: 29
        content: "\"{}_{}\".format(1, 2, *args)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 29
  fix:
    edits:
      - location:
          row: 20
          column: 0
        end_location:
          row: 20
          column: 29
        content: "\"{}_{}\".format(*args, 1, 2)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 33
  fix:
    edits:
      - location:
          row: 22
          column: 0
        end_location:
          row: 22
          column: 33
        content: "\"{}_{}_{}\".format(1, **kwargs)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 36
  fix:
    edits:
      - location:
          row: 24
          column: 0
        end_location:
          row: 24
          column: 36
        content: "\"{}_{}_{}\".format(1, 2, **kwargs)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 39
  fix:
    edits:
      - location:
          row: 26
          column: 0
        end_location:
          row: 26
          column: 39
        content: "\"{}_{}_{}\".format(1, 2, 3, **kwargs)"
  parent: ~
- kind:
    name: FormatLiterals
    body: Use implicit references for positional format fields
    suggestion: Remove explicit positional indices
    fixable: true
  location:
    row: 28
    column: 0
  end_location:
    row: 28
    column: 46
  fix:
    edits:
      - location:
          row: 28
          column: 0
        end_location:
          row: 28
          column: 46
        content: "\"{}_{}_{}\".format(1, 2, 3, *args, **kwargs)"
  parent: ~

