crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP030_UP030_2.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    FormatLiterals: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 19
  fix:
    content:
      - "\"{}\".format(*args)"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 19
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 22
  fix:
    content:
      - "\"{}\".format(**kwargs)"
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 22
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 23
  fix:
    content:
      - "\"{}_{}\".format(*args)"
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 23
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 26
  fix:
    content:
      - "\"{}_{}\".format(1, *args)"
    location:
      row: 12
      column: 0
    end_location:
      row: 12
      column: 26
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 23
  fix: ~
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 26
  fix:
    content:
      - "\"{}_{}\".format(*args, 1)"
    location:
      row: 16
      column: 0
    end_location:
      row: 16
      column: 26
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 29
  fix:
    content:
      - "\"{}_{}\".format(1, 2, *args)"
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 29
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 29
  fix:
    content:
      - "\"{}_{}\".format(*args, 1, 2)"
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 29
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 33
  fix:
    content:
      - "\"{}_{}_{}\".format(1, **kwargs)"
    location:
      row: 22
      column: 0
    end_location:
      row: 22
      column: 33
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 36
  fix:
    content:
      - "\"{}_{}_{}\".format(1, 2, **kwargs)"
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 36
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 39
  fix:
    content:
      - "\"{}_{}_{}\".format(1, 2, 3, **kwargs)"
    location:
      row: 26
      column: 0
    end_location:
      row: 26
      column: 39
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 28
    column: 0
  end_location:
    row: 28
    column: 46
  fix:
    content:
      - "\"{}_{}_{}\".format(1, 2, 3, *args, **kwargs)"
    location:
      row: 28
      column: 0
    end_location:
      row: 28
      column: 46
  parent: ~

