crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP031_0.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 4
    column: 6
  end_location:
    row: 4
    column: 22
  fix:
    content: "'{} {}'.format(a, b)"
    location:
      row: 4
      column: 6
    end_location:
      row: 4
      column: 22
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 21
  fix:
    content: "'{}{}'.format(a, b)"
    location:
      row: 6
      column: 6
    end_location:
      row: 6
      column: 21
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 20
  fix:
    content: "\"trivial\".format()"
    location:
      row: 8
      column: 6
    end_location:
      row: 8
      column: 20
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 10
    column: 6
  end_location:
    row: 10
    column: 24
  fix:
    content: "\"{}\".format(\"simple\")"
    location:
      row: 10
      column: 6
    end_location:
      row: 10
      column: 24
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 12
    column: 6
  end_location:
    row: 12
    column: 34
  fix:
    content: "\"{}\".format(\"%s\" % (\"nested\",))"
    location:
      row: 12
      column: 6
    end_location:
      row: 12
      column: 34
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 12
    column: 14
  end_location:
    row: 12
    column: 32
  fix:
    content: "\"{}\".format(\"nested\")"
    location:
      row: 12
      column: 14
    end_location:
      row: 12
      column: 32
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 12
    column: 18
  end_location:
    row: 12
    column: 36
  fix:
    content: "\"{}\".format(\"nested\")"
    location:
      row: 12
      column: 18
    end_location:
      row: 12
      column: 36
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 14
    column: 6
  end_location:
    row: 14
    column: 28
  fix:
    content: "\"{}% percent\".format(15)"
    location:
      row: 14
      column: 6
    end_location:
      row: 14
      column: 28
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 16
    column: 6
  end_location:
    row: 16
    column: 18
  fix:
    content: "\"{:f}\".format(15)"
    location:
      row: 16
      column: 6
    end_location:
      row: 16
      column: 18
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 18
    column: 6
  end_location:
    row: 18
    column: 19
  fix:
    content: "\"{:.0f}\".format(15)"
    location:
      row: 18
      column: 6
    end_location:
      row: 18
      column: 19
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 20
    column: 6
  end_location:
    row: 20
    column: 20
  fix:
    content: "\"{:.3f}\".format(15)"
    location:
      row: 20
      column: 6
    end_location:
      row: 20
      column: 20
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 22
    column: 6
  end_location:
    row: 22
    column: 19
  fix:
    content: "\"{:3f}\".format(15)"
    location:
      row: 22
      column: 6
    end_location:
      row: 22
      column: 19
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 24
    column: 6
  end_location:
    row: 24
    column: 19
  fix:
    content: "\"{:<5f}\".format(5)"
    location:
      row: 24
      column: 6
    end_location:
      row: 24
      column: 19
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 26
    column: 6
  end_location:
    row: 26
    column: 18
  fix:
    content: "\"{:9f}\".format(5)"
    location:
      row: 26
      column: 6
    end_location:
      row: 26
      column: 18
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 28
    column: 6
  end_location:
    row: 28
    column: 20
  fix:
    content: "\"{:#o}\".format(123)"
    location:
      row: 28
      column: 6
    end_location:
      row: 28
      column: 20
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 30
    column: 6
  end_location:
    row: 30
    column: 26
  fix:
    content: "\"brace {{}} {}\".format(1)"
    location:
      row: 30
      column: 6
    end_location:
      row: 30
      column: 26
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 33
    column: 2
  end_location:
    row: 35
    column: 9
  fix:
    content: "\"{}\".format(\n    \"trailing comma\",\n        )"
    location:
      row: 33
      column: 2
    end_location:
      row: 35
      column: 9
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 38
    column: 6
  end_location:
    row: 38
    column: 22
  fix:
    content: "\"foo {} \".format(x)"
    location:
      row: 38
      column: 6
    end_location:
      row: 38
      column: 22
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 40
    column: 6
  end_location:
    row: 40
    column: 26
  fix:
    content: "\"{k}\".format(k=\"v\")"
    location:
      row: 40
      column: 6
    end_location:
      row: 40
      column: 26
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 42
    column: 6
  end_location:
    row: 45
    column: 1
  fix:
    content: "\"{k}\".format(\n    k=\"v\",\n    i=\"j\",\n)"
    location:
      row: 42
      column: 6
    end_location:
      row: 45
      column: 1
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 47
    column: 6
  end_location:
    row: 47
    column: 37
  fix:
    content: "\"{to_list}\".format(to_list=[])"
    location:
      row: 47
      column: 6
    end_location:
      row: 47
      column: 37
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 49
    column: 6
  end_location:
    row: 49
    column: 43
  fix:
    content: "\"{k}\".format(k=\"v\", i=1, j=[])"
    location:
      row: 49
      column: 6
    end_location:
      row: 49
      column: 43
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 51
    column: 6
  end_location:
    row: 51
    column: 29
  fix:
    content: "\"{ab}\".format(ab=1)"
    location:
      row: 51
      column: 6
    end_location:
      row: 51
      column: 29
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 53
    column: 6
  end_location:
    row: 53
    column: 27
  fix:
    content: "\"{a}\".format(a=1)"
    location:
      row: 53
      column: 6
    end_location:
      row: 53
      column: 27
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 56
    column: 4
  end_location:
    row: 57
    column: 21
  fix:
    content: "\"foo {} \"\n    \"bar {}\".format(x, y)"
    location:
      row: 56
      column: 4
    end_location:
      row: 57
      column: 21
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 61
    column: 4
  end_location:
    row: 62
    column: 40
  fix:
    content: "\"foo {foo} \"\n    \"bar {bar}\".format(foo=x, bar=y)"
    location:
      row: 61
      column: 4
    end_location:
      row: 62
      column: 40
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 67
    column: 4
  end_location:
    row: 68
    column: 37
  fix:
    content: "\"foo {foo} \"\n    \"bar {bar}\".format(foo=x, **bar)"
    location:
      row: 67
      column: 4
    end_location:
      row: 68
      column: 37
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 71
    column: 6
  end_location:
    row: 71
    column: 29
  fix:
    content: "\"{} \\N{snowman}\".format(a)"
    location:
      row: 71
      column: 6
    end_location:
      row: 71
      column: 29
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 73
    column: 6
  end_location:
    row: 73
    column: 40
  fix:
    content: "\"{foo} \\N{snowman}\".format(foo=1)"
    location:
      row: 73
      column: 6
    end_location:
      row: 73
      column: 40
  parent: ~
- kind:
    name: PrintfStringFormatting
    body: Use format specifiers instead of percent format
    suggestion: Replace with format specifiers
    fixable: true
  location:
    row: 75
    column: 6
  end_location:
    row: 75
    column: 35
  fix:
    content: "(\"foo {} \" \"bar {}\").format(x, y)"
    location:
      row: 75
      column: 6
    end_location:
      row: 75
      column: 35
  parent: ~

